--- a/frontend/src/styles/apperance.css
+++ b/frontend/src/styles/apperance.css
@@ -15,7 +15,7 @@ div#ap div.bar
 }
 div#ap div.side:nth-child(1)
 {
-    width: 15%;
+    width: 215%;
     height: 100%;
 }
 div#ap div.side:nth-child(2)
@@ -135,3 +135,49 @@ button img
     width: 70%;
     margin-left: 10%;
 }
+
+
+/* Początek do wyjebanjia ale na teraz potrzebne */
+
+.pageContent * {
+    border: red 1px dashed;
+}
+
+.pageContent div,.pageContent footer {
+    min-height: 60px
+}
+
+.dropPlace {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+}
+
+.headerDrop {
+    width: 100%;
+}
+
+.headerDrop div {
+    width: 100%!important;
+    box-sizing: border-box;
+}
+
+.footerDrop {
+    width: 100%;
+}
+.footerDrop div {
+    width: 100%!important;
+    box-sizing: border-box;
+}
+
+.contentDrop {
+    display: flex;
+    flex-direction: row;
+}
+
+.contentDrop div{
+     width: 50%!important;
+     box-sizing: border-box;
+}
+
+/* Koniec do wyjebanjia ale na teraz potrzebne */
