--- a/Projekt/client/src/styles/editorBeta.css
+++ b/Projekt/client/src/styles/editorBeta.css
@@ -19,14 +19,39 @@
     min-width: 300px;
     height: 100%;
     background: white;
-
+    border-left: 1px solid rgba(0,0,0,.25);
+    box-sizing: border-box;
+    padding: 5px;
 } 
-
+#editorPage #options label{
+    display: block;
+    margin-bottom: 5px;
+    width: 100%;
+    font-size: 14px;
+    color: #444;
+}
+#editorPage #options label input
+{
+    width: calc(100%);
+    border: 1px solid rgba(0,0,0,.25);
+    border-radius: 10px;
+    height: 30px;
+    padding: 5px 10px;
+    float: left;
+    box-sizing: border-box;
+    outline: none;
+    margin-top: 3px;
+    margin-bottom: 5px;
+}
 #editorPage #editor #editorHeader
 {
     width: 100%;
     height: 40px;
     min-height: 40px;
+    padding-left: 10px;
+    display: flex;
+    justify-self: left;
+    align-items: center;
     background: white;
     box-sizing: border-box;
     border-bottom: 1px solid rgba(0, 0, 0,0.25);
@@ -86,6 +111,8 @@
     width: 100%;
     overflow-y: scroll;
     display: flex;
+    padding: 5px;
+    box-sizing: border-box;
     flex-direction: column;
 }
 #editorSelectorBody .section h3
@@ -96,8 +123,33 @@
     padding: 5px;
     box-sizing: border-box;
     background: #f5f5f5;
+    position: relative;
+    align-items: center;
 }
-
+#editorSelectorBody .section h3 button
+{
+    position: absolute;
+    width: 25px;
+    background: transparent;
+    height: 25px;
+    right: 5px;
+    border: 0;
+    border-radius: 50%;
+    cursor: pointer;
+}
+#editorSelectorBody .section h3 button:hover
+{
+    background: rgba(0,0,0,.1);
+}
+#editorSelectorBody .section h3 button img
+{
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 #pagePreviewBody
 {
     min-width: 100%;
@@ -115,4 +167,179 @@
   .editorElement.selectedElement,
 .editorText.selectedText {
   border: 2px solid red;
+}
+.editorSelectorHeaderButton
+{
+    width: 43%;
+    height: 98%;
+    margin: 1%;
+    background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 40%;
+}
+.addButton
+{
+    width: 43%;
+    height: 80px;
+    margin: 1%;
+    background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 40%;
+}
+
+.addButton img
+{
+    width: 20px;
+    height: 20px;
+}
+
+#addButtonsSection
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+.pageList
+{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+}
+
+.pageList .pageOption
+{
+    position: relative;
+    width: 25px;
+    height: 25px;
+    min-width: 25px;
+    margin-left: 5px;
+    border: 0;
+    background: transparent;
+    cursor: pointer;
+}
+.pageList button:first-child
+{
+    width: 100%;
+    height: 100%;
+    border: 0;
+    cursor: pointer;
+    text-align: left;
+    background: transparent;
+}
+.pageList .pageOption img
+{
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+
+
+#overlay
+{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.75);
+    backdrop-filter: blur(3px);
+    z-index: 100;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+#overlay #modalBox
+{
+    background: white;
+    width: 20%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+#overlay #modalBox #modalBoxHeader
+{
+    width: 100%;
+    height: 40px;
+    box-sizing: border-box;
+    padding: 5px;
+    border-bottom: 1px solid rgba(0,0,0,.25);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#overlay #modalBox #modalBoxHeader button
+{
+    width: 30px;
+    height: 30px;
+    position: relative;
+    border: 0;
+    background: transparent;
+    outline: none;
+    cursor: pointer;
+
+}
+#overlay #modalBox #modalBoxHeader button img
+{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    top: 50%;
+    left: 50%;
+    filter: invert(0);
+    transform: translate(-50%,-50%);
+}
+
+#overlay #modalBox #modalBoxBody
+{
+    padding: 5px;
+    position: relative;
+    height: calc(100% - 40px);
+}
+#overlay #modalBox #modalBoxBody label
+{
+    font-size: 14px;
+    color: #404040;
+}
+#overlay #modalBox #modalBoxBody input 
+{
+    width: calc(100%);
+    border: 1px solid rgba(0,0,0,.25);
+    border-radius: 10px;
+    height: 30px;
+    padding: 5px 10px;
+    float: left;
+    box-sizing: border-box;
+    outline: none;
+}
+
+#overlay #modalBox #modalBoxBody button
+{
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    text-align: center;
+    color: white;
+    background:#FE735C;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    margin-top: 10px;
+    outline: none;
+    border: 0;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .3s;
 }
