--- a/Projekt/client/src/styles/editor.css
+++ b/Projekt/client/src/styles/editor.css
@@ -5,6 +5,7 @@
     display: flex;
     padding: 0;
     background:#404040;
+    
 
 }
 .editorColumn:first-child
@@ -30,7 +31,7 @@
     height: 40px;
     position: relative;
     display: flex;
-    background: #f5f5f5;
+    background: white;
     border-bottom: 1px solid rgba(0,0,0,.25);
 }
 #editorSelector
@@ -38,17 +39,19 @@
     width: 20%;
     min-width: 20%;
     height: 100%;
-    background: #f5f5f5;
+    background: white;
     border-right: 1px solid rgba(0,0,0,.25);
     box-sizing: border-box;
 }
 #editorDisplay
 {
     background: transparent;
-    width: 80%;
-    min-width: 80%;
+    width: 100%;
     height: 100%;
     position: relative;
+    overflow-y: scroll;
+    padding: 10px;
+    box-sizing: border-box;
 }
 #editorHeader span
 {
@@ -61,7 +64,7 @@
 #editorHeader span:first-child{
     width: 20%;
     box-sizing: border-box;
-    border-right: 1px solid rgba(0,0,0,.25);
+    /* border-right: 1px solid rgba(0,0,0,.25); */
    
 }
 #editorHeader span:last-child{
@@ -129,7 +132,7 @@
 {
     width: 100%;
     height: 100%;
-    background: #f5f5f5;
+    background: white;
     padding: 5px;
     box-sizing: border-box;
 }
@@ -145,7 +148,7 @@
     height: 40px;
     line-height: 40px;
 }
-#editorSelectorHeader
+.editorSelectorHeader
 {
     width: 100%;
     height: 40px;
@@ -157,11 +160,11 @@
     box-sizing: border-box;
     padding: 5px;
 }
-#editorSelectorHeader h3
+.editorSelectorHeader h3
 {
     margin-bottom: 0;
 }
-#editorSelectorHeader span button
+.editorSelectorHeader span button
 {
     width: 30px;
     height: 30px;
@@ -172,7 +175,7 @@
     cursor: pointer;
 
 }
-#editorSelectorHeader span button img
+.editorSelectorHeader span button img
 {
     position: absolute;
     width: 15px;
@@ -318,4 +321,11 @@
     border: 1px solid rgba(0,0,0,.25);
     transform: translate(-50%,-50%);
     transition: .3s;
+}
+
+#editorBody
+{
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
