--- a/Projekt/client/src/styles/editorBeta.css
+++ b/Projekt/client/src/styles/editorBeta.css
@@ -171,8 +171,10 @@
 }
 #pagePreviewBody
 {
-    min-width: 100%;
+    width: 100%;
+    max-width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .selectedElement {
@@ -180,7 +182,7 @@
   }
 
   .selectedText {
-    border: 2px solid blue;
+    border: 2px solid blue!important;
     /* Add any other desired styles */
   }
   .editorElement.selectedElement,
@@ -198,6 +200,7 @@
     justify-content: center;
     align-items: center;
     flex: 40%;
+    cursor: pointer;
 }
 .addButton
 {
@@ -211,12 +214,14 @@
     align-items: center;
     flex: 40%;
     align-self: flex-start;
+    cursor: pointer;
 }
 
 .addButton img
 {
     width: 20px;
     height: 20px;
+    margin-bottom: 5px;
 }
 
 #addButtonsSection
@@ -243,6 +248,7 @@
     margin-left: 5px;
     border: 0;
     background: transparent;
+    border-radius: 50%;
     cursor: pointer;
 }
 .pageList button:first-child
@@ -264,7 +270,10 @@
     transform: translate(-50%,-50%);
 }
 
-
+.pageList .pageOption:hover
+{
+    background: rgba(0,0,0,.1);
+}
 
 #overlay
 {
@@ -363,4 +372,44 @@
     border-radius: 10px;
     cursor: pointer;
     transition: .3s;
+}
+
+
+.previewDisplay
+{
+    width: 100vw!important;
+    padding: 0!important;
+    overflow-y: auto!important;
+}
+
+.elementTag
+{
+    display: flex;
+    height: 25px;
+    justify-content: space-between;
+}
+
+.elementTag button
+{
+    width: 25px;
+    height: 25px;
+    background: transparent;
+    border: 0;
+    position: relative;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.elementTag button:hover
+{
+    background: #f5f5f5;
+}
+.elementTag button img
+{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    left:50%;
+    top: 50%;
+    transform:translate(-50%,-50%);
+ 
 }
