--- a/Projekt/client/src/styles/main.css
+++ b/Projekt/client/src/styles/main.css
@@ -29,7 +29,7 @@ main
 {
     height: 100%;
     width: 60px;
-    background:#f5f5f5;
+    background:white;
     box-sizing: border-box;
     border-right: 1px solid rgba(0,0,0,.25);
     position: relative;
@@ -76,6 +76,7 @@ main
 {
     width: 20px;
     height: 20px;
+    filter: invert(0.3);
 }
 #sidebar .menuElement a
 {
@@ -100,4 +101,29 @@ header
     height: 40px;
     padding-left: 10px;
     box-sizing: border-box;
+}
+
+
+#roll
+{
+    position: absolute;
+    left: 40px;
+    bottom: 40px;
+    border-radius: 50%;
+    background: white;
+    border: 1px solid rgba(0,0,0,.25);
+    transform: translate(-50%,-50%);
+    transition: .3s;
+}
+#roll img
+{
+    filter: invert(0);
+}
+#roll:hover
+{
+    background: #FE735C;
+}
+#roll:hover img
+{
+    filter: invert(1)!important;
 }
